updated bomb sourcegraphic

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <!-- <span style="display:none">
+    <span style="display:none">
         <svg id="bomb" width="43.28mm" height="43.28mm" viewBox="0 0 43.28 43.28" xmlns="http://www.w3.org/2000/svg">
             <g transform="translate(-60.83 -93.98)">
                 <circle cx="82.73" cy="115.6" r="16.14" style="fill:#000"/>
@@ -25,7 +25,7 @@
                 <circle cx="78.5" cy="109.8" r="3.969" style="fill:#ffffff88"/>
             </g>
         </svg>
-    </span> -->
+    </span>
 
     <article id="g-size">
         <span class="bsize">easy</span>
